<resources>
    <string name="app_name">Signify</string>
    <string name="signify">SIGNIFY</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back_to_sign_up_text">Don\'t have an account?</string>
    <string name="back_to_login_text">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">enter password</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billboard_id">"Billboard %s"</string>
    <string name="billboard_type">"Type of display: %s"</string>
    <string name="billboard_size">"Size: %s"</string>
    <string name="billboard_surface">"Surface: %s"</string>
    <string name="billboard_price">"$%.2f day"</string>
    <string name="billboard_order_price">"%.2f$"</string>
    <string name="title_activity_desctiption">DesctiptionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="phone_number">Phone Number:</string>
    <string name="client_email_field">Email:</string>
    <string name="client_name_field">Name:</string>
    <string name="original_dates">Original:  %s</string>'
    <string name="price">$%.2f</string>
    <string name="change_payout_info">if manager agrees to the changes, your new total payout will be  $%.2f</string>
    <string name="pay_full">Pay the full amount ($%.2f)</string>
    <string name="decline_request">Decline the request ($0)</string>
</resources>