<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/center_line2"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:layout_above="@id/center_line2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signify"
            android:textAlignment="center"
            android:textSize="47sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="33sp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingStart="20dp"
        android:layout_above="@id/center_line2"
        android:hint="@string/email"
        android:backgroundTint="@color/material_dynamic_neutral_variant95"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingStart="20dp"
        android:layout_below="@id/center_line2"
        android:hint="@string/password"
        android:backgroundTint="@color/material_dynamic_neutral_variant95"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/signup"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/signup_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:text="@string/back_to_login_text"
        android:textColor="@color/black"/>
</RelativeLayout>