<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#F6F6F6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="100dp"

            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </View>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:layout_editor_absoluteX="44dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                app:passwordToggleEnabled="true"
                tools:layout_editor_absoluteX="60dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/login_password"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_edittext"
                android:text="@string/log_in"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/login_password"
                tools:layout_editor_absoluteX="44dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>